[gd_scene load_steps=9 format=3 uid="uid://dkequ0roedxoq"]

[ext_resource type="Script" path="res://scripts/DamageTimer.gd" id="1_bbo3v"]
[ext_resource type="Script" path="res://scripts/zombie.gd" id="1_fs1vw"]
[ext_resource type="Script" path="res://scripts/hitstun.gd" id="2_01pfg"]
[ext_resource type="PackedScene" uid="uid://c7xq03x0r4mos" path="res://scenes/zombie.tscn" id="4_fw2ew"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1f0q"]
size = Vector2(4, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uhd2r"]
size = Vector2(10, 30)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_a3y01"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_565be"]
emission_shape = 1
emission_sphere_radius = 10.43
particle_flag_disable_z = true
spread = 84.79
gravity = Vector3(0, 98, 0)
initial_velocity_min = 63.16
initial_velocity_max = 105.26
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_min = -333.5
angle_max = 303.2
scale_max = 2.0
color = Color(1, 0.0588235, 0.0745098, 1)

[node name="Zombie" type="CharacterBody2D"]
script = ExtResource("1_fs1vw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_g1f0q")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_uhd2r")

[node name="DamageLabel" type="Label" parent="."]
offset_left = -6.0
offset_top = -29.0
offset_right = 4.0
offset_bottom = -3.0
scale = Vector2(1.24, 0.64)
theme_override_colors/font_color = Color(0.980392, 0, 0, 1)
theme_override_font_sizes/font_size = 0
vertical_alignment = 3
metadata/_edit_use_anchors_ = true

[node name="DamageTimer" type="Timer" parent="."]
script = ExtResource("1_bbo3v")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_a3y01")
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_565be")
lifetime = 0.3
one_shot = true
speed_scale = 1.61
explosiveness = 0.55
randomness = 0.45

[node name="RayCast2DRight" type="RayCast2D" parent="."]
target_position = Vector2(223, 0)

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
target_position = Vector2(-223, 0)

[node name="Hitstun" type="Timer" parent="."]
script = ExtResource("2_01pfg")

[node name="ZombieSprite" parent="." instance=ExtResource("4_fw2ew")]
position = Vector2(0, 0)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
